--- a/Css Styling.css
+++ b/Css Styling.css
@@ -1371,10 +1371,18 @@ input, select, option{
     header{
         height: 55px;
     }
+    .Tile-and-logo{
+        display: flex;
+        flex-direction: row;
+        
+    }
   .Tile-and-logo h1 {
     font-size: 10px; 
-    padding-top: 5px;
-    padding-right: 0;        
+    position: absolute;
+    top: 18px;
+    left: 30px;
+    height: 20px;
+    width:15px;       
   }
   .Footer-Title{
     font-size: 10px; 
@@ -1382,18 +1390,20 @@ input, select, option{
 
   }
   .Logo-icon{
-    padding-top:0px;
+    position: absolute;
+    top: 5px;
+    left: 10px;
     height: 20px;
     width:15px;
   }
   .Navigation-Bar {
     padding: 0px;
     position: absolute;
-    top:0px;
-    right: 80px;
+    top:10px;
+    right: 110px;
   }
    .Navigation-Bar ul {
-     font-size: 10px;
+     font-size: 8px;
      width: 180px;
      display: flex;
   }
@@ -1403,8 +1413,8 @@ input, select, option{
     padding: 3px;
     cursor: pointer;
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 25px;
+    right: 10px;
 }
     .Intro-Section h1{
         font-size: 15px;
